[gd_scene load_steps=2 format=3 uid="uid://cj8k7n2m5qwx5"]

[ext_resource type="Script" path="res://scripts/PsychologistMenu.gd" id="1_psych"]

[node name="PsychologistMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1_psych")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.2, 0.3, 0.5, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 50.0
offset_top = 50.0
offset_right = -50.0
offset_bottom = -50.0

[node name="Title" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "PSICÓLOGO DEPORTIVO"
horizontal_alignment = 1
theme_override_font_sizes/font_size = 32
theme_override_colors/font_color = Color(1, 1, 1, 1)

[node name="InfoPanel" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="InfoLabel" type="Label" parent="VBoxContainer/InfoPanel"]
layout_mode = 2
size_flags_horizontal = 3
text = "Selecciona un jugador para enviar al psicólogo"
theme_override_font_sizes/font_size = 16
theme_override_colors/font_color = Color(1, 1, 1, 1)

[node name="BackButton" type="Button" parent="VBoxContainer/InfoPanel"]
layout_mode = 2
text = "Volver"
theme_override_font_sizes/font_size = 16

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="PlayersContainer" type="VBoxContainer" parent="VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
